Proyecto_AS_Kubernetes_JWojciechowska/deployment_orientdb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-deployment-orientdb
spec:
  replicas: 1
  selector:
    matchLabels:
      component: dep-orientdb
  template:
    metadata:
      labels:
        component: dep-orientdb
    spec:
      volumes:
        - name: pv-orientdb
          persistentVolumeClaim:
            claimName: pvc
      containers:
      - name: orientdb
        image: orientdb:2.2.35
        volumeMounts:
        - name: pv-orientdb
          mountPath: orientdb/databases
