Proyecto_AS_Kubernetes_JWojciechowska/deployment_script.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-deployment-script
spec:
  replicas: 1
  selector:
    matchLabels:
      component: dep-script
  template:
    metadata:
      labels:
        component: dep-script
    spec:
      containers:
      - name: script
        image: dimitlink/container_script_kubectl
