Proyecto_AS_Kubernetes_JWojciechowska/cluster_ip_orientdb.yml
apiVersion: v1
kind: Service
metadata:
  name: c-orientdb
spec:
  selector:
    component: dep-orientdb
  ports:
  - name: pbinario
    port: 2424
    targetPort: 2424
  - name: pinterfaz
    port: 80
    targetPort: 2480
